objects/AcctSeed__Billing__c/fields/AcctSeed__Accounting_Period__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Accounting_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Used to specify accounting period for financial reporting.</inlineHelpText>
    <label>Accounting  Period</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AcctSeed__Accounting_Period__c.AcctSeed__Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filterItems>
        <filterItems>
            <field>AcctSeed__Accounting_Period__c.AcctSeed__Close_AR__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <infoMessage>The accounting period must be open</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>AcctSeed__Accounting_Period__c</referenceTo>
    <relationshipLabel>Billings</relationshipLabel>
    <relationshipName>Project_Billings</relationshipName>
    <type>Lookup</type>
</CustomField>