objects/AcctSeed__Billing__c/fields/AcctSeed__Age__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Age__c</fullName>
    <formula>IF(AND(TODAY() - AcctSeed__Due_Date2__c &lt;= 0,(ROUND(AcctSeed__Balance__c, 2) != 0)), &quot;0-Current&quot;,
IF(AND(30 &gt;= TODAY() - AcctSeed__Due_Date2__c, TODAY() - AcctSeed__Due_Date2__c &gt; 0, (ROUND(AcctSeed__Balance__c, 2) != 0)), &quot;1-30 Days&quot;,
IF(AND(60 &gt;= TODAY() - AcctSeed__Due_Date2__c, TODAY() - AcctSeed__Due_Date2__c &gt; 0, (ROUND(AcctSeed__Balance__c, 2) != 0)), &quot;31-60 Days&quot;,
IF(AND(90 &gt;= TODAY() - AcctSeed__Due_Date2__c, TODAY() - AcctSeed__Due_Date2__c &gt; 0, (ROUND(AcctSeed__Balance__c, 2) != 0)), &quot;61-90 Days&quot;,
IF(AND(TODAY() - AcctSeed__Due_Date2__c &gt; 90, (ROUND(AcctSeed__Balance__c, 2) != 0)), &quot;Over 90 Days&quot;,
IF(AND(ROUND(AcctSeed__Balance__c, 2) = 0, TEXT(AcctSeed__Status__c) = &quot;Posted&quot;), &quot;Closed&quot;,
&quot;&quot;))))))</formula>
    <inlineHelpText>Measures the current age of the balance of the billing. Used to monitor collection of balance.</inlineHelpText>
    <label>Age</label>
    <type>Text</type>
</CustomField>