objects/AcctSeed__Billing__c/fields/AcctSeed__Balance__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Balance__c</fullName>
    <formula>AcctSeed__Total__c - AcctSeed__Received_Amount__c - AcctSeed__Cash_Application_Adjustment_Amount__c - AcctSeed__Credit_Memo_Applied_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Billing Total - received amount - adjustment amount- credit memo applied amount.</inlineHelpText>
    <label>Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>