objects/AcctSeed__Billing__c/fields/AcctSeed__Billing_Cash_Receipt_Count__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Billing_Cash_Receipt_Count__c</fullName>
    <label>Billing Cash Receipt Count</label>
    <summaryForeignKey>AcctSeed__Billing_Cash_Receipt__c.AcctSeed__Billing__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>