objects/AcctSeed__Billing__c/fields/AcctSeed__Billing_Cycle_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Billing_Cycle_Start_Date__c</fullName>
    <inlineHelpText>Used to show start of range in which products or services were delivered.</inlineHelpText>
    <label>Billing Cycle Start Date</label>
    <type>Date</type>
</CustomField>