objects/AcctSeed__Billing__c/fields/AcctSeed__Billing_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Billing_PostalCode__c</fullName>
    <label>Billing Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>