objects/AcctSeed__Billing__c/fields/AcctSeed__Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Billing_Street__c</fullName>
    <label>Billing Street</label>
    <type>TextArea</type>
</CustomField>