objects/AcctSeed__Billing__c/fields/AcctSeed__Credit_Memo_Reason__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Credit_Memo_Reason__c</fullName>
    <inlineHelpText>The reason for issuing the credit memo.</inlineHelpText>
    <label>Credit Memo Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Damaged</fullName>
            </value>
            <value>
                <fullName>Missing Item</fullName>
            </value>
            <value>
                <fullName>Order Change</fullName>
            </value>
            <value>
                <fullName>Overpaid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>