objects/AcctSeed__Billing__c/fields/AcctSeed__Customer__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Customer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>The organization you would like to pay you for your product or service.</inlineHelpText>
    <label>Customer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.AcctSeed__Accounting_Type__c</field>
            <operation>contains</operation>
            <value>Customer, Customer and Vendor</value>
        </filterItems>
        <filterItems>
            <field>Account.AcctSeed__Accounting_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Billings</relationshipLabel>
    <relationshipName>Billings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>