objects/AcctSeed__Billing__c/fields/AcctSeed__Date__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <inlineHelpText>Date the Billing is issued to the customer.</inlineHelpText>
    <label>Billing Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>