objects/AcctSeed__Billing__c/fields/AcctSeed__Destination_Address_Override__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Destination_Address_Override__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Overrides the Billing&apos;s default destination address.</description>
    <inlineHelpText>Overrides the Billing&apos;s default destination address.</inlineHelpText>
    <label>Destination Address Override</label>
    <referenceTo>AcctSeed__Address__c</referenceTo>
    <relationshipLabel>Destination Billings</relationshipLabel>
    <relationshipName>Destination_Billings</relationshipName>
    <type>Lookup</type>
</CustomField>