objects/AcctSeed__Billing__c/fields/AcctSeed__Due_Date2__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Due_Date2__c</fullName>
    <inlineHelpText>The date payment for the billing is due.</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>