objects/AcctSeed__Billing__c/fields/AcctSeed__Funded_Amount__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Funded_Amount__c</fullName>
    <inlineHelpText>This is related to the Automated Refunds process from the cash receipt. This displays the sum of applied amounts from any billing cash receipts with the &apos;Refund&apos; Posting Status.</inlineHelpText>
    <label>Funded Amount</label>
    <summarizedField>AcctSeed__Billing_Cash_Receipt__c.AcctSeed__Applied_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>AcctSeed__Billing_Cash_Receipt__c.AcctSeed__Status__c</field>
        <operation>equals</operation>
        <value>Refund</value>
    </summaryFilterItems>
    <summaryForeignKey>AcctSeed__Billing_Cash_Receipt__c.AcctSeed__Billing__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>