objects/AcctSeed__Billing__c/fields/AcctSeed__Locked_In_AvaTax__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Locked_In_AvaTax__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this billing was included in a tax filing done in AvaTax, this field is automatically checked when the billing is unposted. Editing of specific fields is then allowed and will not impact the related transaction in AvaTax.</inlineHelpText>
    <label>Locked in AvaTax</label>
    <type>Checkbox</type>
</CustomField>