objects/AcctSeed__Billing__c/fields/AcctSeed__Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Paid_Date__c</fullName>
    <inlineHelpText>The applied date the billing was fully paid.</inlineHelpText>
    <label>Paid Date</label>
    <type>Date</type>
</CustomField>