objects/AcctSeed__Billing__c/fields/AcctSeed__Payment_Processor__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Payment_Processor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Payment Processor that will be used to process the payment if this Billing is paid for using the Payment Link. This defaults to the global default on Accounting Settings if this is set.</inlineHelpText>
    <label>Payment Processor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AcctSeed__Payment_Processor__c.AcctSeed__AP_Payment_Processor__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AcctSeed__Payment_Processor__c</referenceTo>
    <relationshipLabel>Billings</relationshipLabel>
    <relationshipName>Billings</relationshipName>
    <type>Lookup</type>
</CustomField>