objects/AcctSeed__Billing__c/fields/AcctSeed__Payment_Site_URL__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Payment_Site_URL__c</fullName>
    <inlineHelpText>The payment URL generated for Payment Site payments processed through CardKnox.</inlineHelpText>
    <label>Payment Site URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>