objects/AcctSeed__Billing__c/fields/AcctSeed__PDF_Email_Status__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__PDF_Email_Status__c</fullName>
    <inlineHelpText>Indicated if the Billing record has been emailed to the billing contact or not.</inlineHelpText>
    <label>PDF Email Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Unsent</fullName>
                <default>true</default>
                <label>Unsent</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>