objects/AcctSeed__Billing__c/fields/AcctSeed__Proprietary_Billing_Number__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Proprietary_Billing_Number__c</fullName>
    <inlineHelpText>Used for billing numbering outside of standard Salesforce Autonumber.</inlineHelpText>
    <label>Proprietary Billing Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>