objects/AcctSeed__Billing__c/fields/AcctSeed__Received_Amount__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Received_Amount__c</fullName>
    <inlineHelpText>Indicates the amount of cash applied from a single or multiple cash receipts.</inlineHelpText>
    <label>Received Amount</label>
    <summarizedField>AcctSeed__Billing_Cash_Receipt__c.AcctSeed__Applied_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>AcctSeed__Billing_Cash_Receipt__c.AcctSeed__Status__c</field>
        <operation>notEqual</operation>
        <value>Refund</value>
    </summaryFilterItems>
    <summaryForeignKey>AcctSeed__Billing_Cash_Receipt__c.AcctSeed__Billing__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>