objects/AcctSeed__Billing__c/fields/AcctSeed__Sales_Tax3__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Sales_Tax3__c</fullName>
    <description>Summary of the Billing Lines&apos; Tax Amount fields</description>
    <inlineHelpText>Summary of the Billing Lines&apos; Tax Amount fields</inlineHelpText>
    <label>Sales Tax</label>
    <summarizedField>AcctSeed__Billing_Line__c.AcctSeed__Tax_Amount2__c</summarizedField>
    <summaryForeignKey>AcctSeed__Billing_Line__c.AcctSeed__Billing__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>