objects/AcctSeed__Billing__c/fields/AcctSeed__Shipping_City__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Shipping_City__c</fullName>
    <label>Shipping City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>