objects/AcctSeed__Billing__c/fields/AcctSeed__Shipping_Contact__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Shipping_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Alternate contact who received shipment of goods or services.</inlineHelpText>
    <label>Shipping Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Billings (Shipping Contact)</relationshipLabel>
    <relationshipName>Billings1</relationshipName>
    <type>Lookup</type>
</CustomField>