objects/AcctSeed__Billing__c/fields/AcctSeed__Shipping_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Shipping_PostalCode__c</fullName>
    <label>Shipping Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>