objects/AcctSeed__Billing__c/fields/AcctSeed__Status__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Status__c</fullName>
    <inlineHelpText>Used in approvals and invoices that are in process of being finalized. A posted status indicates the invoice is final and no further changes are to be made.</inlineHelpText>
    <label>Posting Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
                <default>true</default>
                <label>Approved</label>
            </value>
            <value>
                <fullName>Posted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>