objects/AcctSeed__Billing__c/fields/AcctSeedERP__Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Sales_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order</label>
    <referenceTo>AcctSeedERP__Sales_Order__c</referenceTo>
    <relationshipLabel>Billings</relationshipLabel>
    <relationshipName>Billings</relationshipName>
    <type>Lookup</type>
</CustomField>