objects/AcctSeed__Billing__c/fields/Billing_Number1__c.field-meta.xml
<CustomField>
    <fullName>Billing_Number1__c</fullName>
    <label>Billing Number</label>
    <type>AutoNumber</type>
</CustomField>