objects/AcctSeed__Billing__c/fields/Billing_Number__c.field-meta.xml
<CustomField>
    <fullName>Billing_Number__c</fullName>
    <label>Billing Number test</label>
    <type>AutoNumber</type>
</CustomField>