objects/AcctSeed__Billing__c/fields/Opportunity_Invoice_Link__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Invoice_Link__c</fullName>
    <label>Opportunity Invoice Link</label>
    <type>Url</type>
</CustomField>