objects/AcctSeed__Billing__c/fields/Total_With_All_Charges__c.field-meta.xml
<CustomField>
    <fullName>Total_With_All_Charges__c</fullName>
    <label>Total With All Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>