objects/AcctSeed__Billing__c/validationRules/AcctSeed__Lock_Override_Addresses_When_Posted.validationRule-meta.xml
<ValidationRule>
    <fullName>AcctSeed__Lock_Override_Addresses_When_Posted</fullName>
    <active>true</active>
    <description>Prevents the override addresses for origin and destination references from being changed when the Billing has already been posted.</description>
    <errorConditionFormula>ISPICKVAL(AcctSeed__Status__c, &apos;Posted&apos;) &amp;&amp; ( ISCHANGED( AcctSeed__Origin_Address_Override__c) ||  ISCHANGED( AcctSeed__Destination_Address_Override__c) )</errorConditionFormula>
    <errorMessage>Override addresses cannot be changed after the Billing has been posted.</errorMessage>
</ValidationRule>