objects/AcctSeed__Billing__c/validationRules/Ship_from_address_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Ship_from_address_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Delivery_Type__c , &quot;Door Delivery&quot;) , ISBLANK ( Ship_From_Address__c ) )</errorConditionFormula>
    <errorDisplayField>Ship_From_Address__c</errorDisplayField>
    <errorMessage>Please review the following field and enter correct ship from address.</errorMessage>
</ValidationRule>